# firstProject

./: CMakeLists.txt  main.cpp
Commands/: ClientCommand.cpp  ClientCommand.h  Command.h  ConditionCommand.cpp  ConditionCommand.h  ConditionParser.cpp  ConditionParser.h  DefineVarCommand.cpp  DefineVarCommand.h  EntercCommand.cpp  EntercCommand.h  ExitCommand.cpp  ExitCommand.h  FactoryCommands.cpp  FactoryCommands.h  IfCommand.cpp  IfCommand.h  IncreaseCounterCommand.h  InitializeCommand.cpp  InitializeCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h  WhileCommmand.cpp  WhileCommmand.h
ControlSimulator/: RunTheSimulator.cpp  RunTheSimulator.h
Expressions/: BinaryExpression.h  CommandExpression.cpp  CommandExpression.h  Div.h  Expression.h  Minus.h  Mult.h  Number.h  Plus.h
ServerAndClient/: DataReaderClient.cpp  DataReaderClient.h  DataReaderServer.cpp  DataReaderServer.h
Useful/: CastStringToExpression.cpp  CastStringToExpression.h  CollectionCommands.cpp  CollectionCommands.h  Factory.h  FactoryExpression.cpp  FactoryExpression.h  StoreVarValue.h  SymbolTable.cpp  SymbolTable.h
